--- a/00_basicos.html
+++ b/00_basicos.html
@@ -362,10 +362,10 @@
     cierto tipo de dato, en este caso como le colocamos el prototipo Object, me va crear un objeto
     console.log(c);
  */
-    /* un objeto es una coleccion de llaves:valores(key:value) y se separan con acento.Puede contener cualquier tipo 
-    de dato.
-     dentro de un objeto a las variables se le van a llamar atributos/propiedades(nombrem apellido, edad, pasatiempos,
-     soltero,contacto) y a las funciones se les llama métodos(saludar, decirMiNombre) */
+    /* un objeto es una coleccion de llaves:valores(key:value) y se separan con acento.Puede contener cualquier 
+    tipo de dato.
+     dentro de un objeto a las variables se le van a llamar atributos/propiedades(nombrem apellido, edad, 
+     pasatiempos, soltero,contacto) y a las funciones se les llama métodos(saludar, decirMiNombre) */
     /*     const jon = {
           nombre: "Jon",
           apellido: "MirCha",
@@ -662,7 +662,6 @@
      for (const key in object) {
         
       }
-    }
 
     -FOR OF ->
     for (const iterator of object) {
