--- a/04_nuevos-tipos.html
+++ b/04_nuevos-tipos.html
@@ -11,7 +11,10 @@
   <h1>Nuevos Tipos de Datos en JavaScript</h1>
   <script>
     /* **********     Curso JavaScript: 49. Symbols - #jonmircha     ********** */
-    /* let id = Symbol("id");
+    /* 
+    Symbols es un tipo de dato primitivo, una vez que nosotros creamos un simbolo su valor se va mantener privado y para uso interno. 
+    Generalmente los symbols suelen agregarse como caracteristicas de objetos, como una propiedad y estas se van a mantener privadas. No podemos utilizar la palabra new. Los simbolos nos permiten crear identificadores de referencia
+    let id = Symbol("id");
     let id2 = Symbol("id2");
 
     console.log(id === id2)
