--- a/02_basicos-ejercicios.html
+++ b/02_basicos-ejercicios.html
@@ -12,7 +12,9 @@
   <script>
     /* 1) Programa una función que cuente el número de caracteres de una cadena de texto, pe. miFunción("Hola Mundo") devolverá 10 */
 
-
+    function numCararteres(str){
+      return str.length
+    }
     /* 2) Programa una función que te devuelva el texto recortado según el número de caracteres indicados, pe. miFunción("Hola Mundo", 4) devolverá "Hola" */
 
 
