--- a/07_dom.html
+++ b/07_dom.html
@@ -132,7 +132,7 @@
   </template>
   <h3>Eventos en JavaScript</h3>
   <h4>Manejadores de Eventos</h4>
-  <button onclick="holaMundo()">Evento con atributo HTML</button>
+  <button onclick="holaMundo()">Evento con atributo HTML</button>  <!-- cuando haga click en el boton se va ejecutar la funcion holaMundo  --> 
   <br><br>
   <button id="evento-semantico">Evento con manejador semántico</button>
   <br><br>
