--- a/08_dom-ejercicios.html
+++ b/08_dom-ejercicios.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejercicios del DOM</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css"> <!--copio el cdn de la libreria hamburguers  -->
   <link rel="stylesheet" href="css/dom-ejercicios.css">
 </head>
 
@@ -17,7 +17,7 @@
     <span class="hamburger-box">
       <span class="hamburger-inner"></span>
     </span>
-  </button>
+  </button>  <!--saco el boton y las linea de codigo de la libreria hamburgers  -->
   <aside class="panel">
     <nav class="menu">
       <a href="#seccion1" data-scroll-spy>Reloj Digital y Alarma Sonora</a>
