--- a/08_dom-ejercicios.html
+++ b/08_dom-ejercicios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es" data-dark>
+<html lang="es" data-dark> 
+  <!-- le agregamos el atributo data-dark a la etiqueta html para que le aplique el modo claro o el modo oscuro -->
 
 <head>
   <meta charset="UTF-8">
